<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">UniVerse</string>
    <string name="auth_message">Please sign in to continue.</string>
    <string name="welcome">Welcome!</string>
    <string name="saving">Saving…</string>
    <string name="profile">Profile</string>
    <string name="complete_profile">Complete Your Profile</string>
    <string name="back">Back</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="edit_profile_picture">Edit Profile Picture</string>
    <string name="selected_chip">Selected</string>
    <string name="google_logo">Google Logo</string>
...
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="bio">Bio</string>
    <string name="bio_description">Tell us about yourself to get started</string>
    <string name="bio_placeholder">Tell us about yourself...</string>
    <string name="save">Save</string>
    <string name="skip">Skip</string>
    <string name="loading">Loading...</string>
    <string name="checking_authentication">Checking authentication...</string>
    <string name="successful_bio_update">Bio updated successfully!</string>
    <string name="logout">Logout</string>
</resources>

